# server/api/Services/Interfaces/IBoardService.cs
@@ -1,0 +1,14 @@
+using api.Models;
+using dataccess;
+using Dtos;
+
+namespace api.Services;
+
+public interface IBoardService
+{
+    Task<Guid> CreateBet(CreateBetDto dto, Guid userId, Transaction transaction);
+
+    Task<PagedResult<BoardDto>> GetAllBoards();
+
+    Task<PagedResult<BoardDto>> GetBoardsByUser(Guid userId);
+}
